# meticulous-telemetry-server

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh  meticulous-telemetry-server.service  telemetry_server.nginx.conf
src/: auth.rs  fetching.rs  main.rs  read_write.rs  types.rs
