[package]
name = "meticulous-telemetry-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4"
chrono = "0.4.40"
regex = "1.11.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
google-oauth = {version = "*", features = ["blocking"]}
